--- a/src/plugin/css/_custom-animations.scss
+++ b/src/plugin/css/_custom-animations.scss
@@ -44,6 +44,9 @@
 	100% { transform: scale3d(1,1,1); }
 }
 
+.wordchargroup.baseline {
+	overflow: hidden
+}
 
 /* Custom Appearance animation classes */
 
