--- a/src/demo/css/_base.scss
+++ b/src/demo/css/_base.scss
@@ -9,7 +9,8 @@
 	--r-main-font-size: 36px;
 	--r-block-margin: 1.8rem;
 	--code-full-bg: #142433;
-	--code-rgba-bg: rgba(50, 65, 80, 0.4);
+	--code-rgba-bg: rgba(91, 102, 112, 0.3);
+
 }
 
 // LISTS
@@ -28,6 +29,10 @@
 
 // EMBEDDED DEMO
 
+.demoembed {
+	width: 768px; height: 400px; margin: 64px auto;
+}
+
 .reveal.embedded {
 	border: 4px solid transparent;
 	border-radius: 8px;
@@ -38,15 +43,16 @@
 		border-color: #42affa;
 		box-shadow: 0 4px 16px rgba(#051525, 0.3)
 	}
-}
-.reveal.embedded .progress {
-	background: rgba(#42affa, 0.3);
-	font-size: 10px;
-	height: 0.3em;
-	border-radius: 0.25em;
-	left: 0.5em;
-	bottom: 0.5em;
-	right: 0.5em;
-	width: calc(100% - 1em);
-	overflow: hidden;
+
+	.progress {
+		background: rgba(#42affa, 0.3);
+		font-size: 10px;
+		height: 0.3em;
+		border-radius: 0.25em;
+		left: 0.5em;
+		bottom: 0.5em;
+		right: 0.5em;
+		width: calc(100% - 1em);
+		overflow: hidden;
+	}
 }
