--- a/demo/assets/css/demo.css
+++ b/demo/assets/css/demo.css
@@ -1,218 +1,1 @@
-.slides {
-  opacity: 0;
-  transition: opacity 0.5s ease;
-}
-.reveal.ready .slides {
-  opacity: 1;
-}
-
-.centerblock {
-  height: 100%;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-}
-
-ol.twocol, .twocol {
-  padding: 0;
-  margin: 0 auto;
-  list-style: none;
-  counter-reset: item;
-  width: 80%;
-  column-count: 2;
-  column-gap: 2em;
-  column-rule: 2px solid rgba(255, 255, 255, 0.12);
-}
-ol.twocol li, .twocol li {
-  counter-increment: item;
-  padding-left: 1.7em;
-}
-ol.twocol li:before, .twocol li:before {
-  content: counter(item) ".";
-  margin-left: -1.7em;
-  margin-right: 0.5em;
-  display: inline-block;
-  width: 1.2em;
-  text-align: right;
-}
-
-.reveal pre {
-  font-size: calc(0.5 * var(--r-main-font-size));
-}
-
-.small, .reveal small {
-  font-size: calc(0.7 * var(--r-main-font-size));
-}
-.small code, .reveal small code {
-  font-size: 0.7em;
-}
-
-p code {
-  font-size: 0.7em;
-}
-
-.reveal code.hljs {
-  background: var(--code-full-bg);
-  border-radius: 0.5em;
-  padding: 0.5em;
-  white-space: pre-wrap;
-}
-.reveal code.hljs td {
-  line-height: 1.4;
-}
-
-p.code, p code, small code, .small code, li code {
-  background: var(--code-rgba-bg);
-  padding: 0.15em 0.25em;
-  border-radius: 0.25em;
-}
-
-.reveal pre {
-  width: 100%;
-}
-
-.reveal pre code {
-  display: block;
-  padding: 5px;
-  overflow: auto;
-  max-height: 400px;
-  word-wrap: normal;
-}
-
-:root {
-  --r-background-color: #051525;
-  --r-heading-text-transform: none;
-  --r-heading1-size: 2.7em;
-  --r-main-font-size: 36px;
-  --r-block-margin: 1.8rem;
-  --code-full-bg: #142433;
-  --code-rgba-bg: rgba(91, 102, 112, 0.3);
-}
-
-.reveal .slides ul li, .reveal .slides ol li {
-  margin-top: 0.4em;
-  margin-bottom: 0.2em;
-}
-
-.has-light-background {
-  --r-link-color: var(--r-link-color-dark);
-  --r-link-color-hover: #0373bd;
-}
-
-.demoembed {
-  width: 768px;
-  height: 400px;
-  margin: 64px auto;
-}
-
-.reveal.embedded {
-  border: 4px solid transparent;
-  border-radius: 8px;
-}
-.reveal.embedded:not(.focused) {
-  cursor: pointer;
-}
-.reveal.embedded.focused {
-  border-color: #42affa;
-  box-shadow: 0 4px 16px rgba(5, 21, 37, 0.3);
-}
-.reveal.embedded .progress {
-  background: rgba(66, 175, 250, 0.3);
-  font-size: 10px;
-  height: 0.3em;
-  border-radius: 0.25em;
-  left: 0.5em;
-  bottom: 0.5em;
-  right: 0.5em;
-  width: calc(100% - 1em);
-  overflow: hidden;
-}
-
-a.github-corner {
-  position: sticky;
-  border: none;
-  pointer-events: initial;
-  z-index: 2;
-  padding: 0;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  line-height: 0;
-  width: max-content;
-  height: max-content;
-  opacity: 0.5;
-  transition: opacity 0.3s;
-  color: var(--c-theme-color, white);
-}
-.rtl a.github-corner {
-  left: auto;
-  margin: 0 0 0 auto;
-  right: 0;
-}
-a.github-corner.bottom {
-  position: sticky;
-  top: 100%;
-  margin-top: auto;
-  top: calc(100% - 70px);
-}
-.reveal.embedded a.github-corner, .reveal-viewport.reveal-scroll a.github-corner {
-  display: none;
-}
-a.github-corner svg {
-  line-height: 0;
-  width: 75px;
-  height: 75px;
-}
-
-a.github-corner:hover {
-  color: var(--c-theme-color, white);
-  opacity: 1;
-}
-
-img {
-  border-radius: 5%;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
-  width: 3.5em;
-  height: 3.5em;
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.row.fivegrid {
-  display: grid;
-  width: 82%;
-  margin: auto;
-  margin: var(--r-block-margin) auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 1em;
-}
-
-.reveal img.demoimg {
-  width: 3.5em;
-  height: 3.5em;
-  max-width: 100%;
-  max-height: 100%;
-  margin: 0.4em;
-  border-radius: 5%;
-}
-.reveal img.demoimg.smallcircle {
-  margin: 0.4em;
-  width: 3em;
-  height: 3em;
-  border-radius: 50%;
-}
-
-.row.smallcircles {
-  grid-gap: 0.5em;
-  width: 75%;
-}
-
-.title {
-  font-size: 3em;
-  font-weight: bold;
-}
-
-.subtitle {
-  font-size: 1.5em;
-}
+.centerblock{height:100%;min-height:100%;display:flex;flex-direction:column;margin:auto}.reveal .slides ul,.reveal .slides ol{--li-gap: .25em}.reveal .slides ul li,.reveal .slides ol li{margin-bottom:var(--li-gap)}.reveal .slides ul li:last-child,.reveal .slides ol li:last-child{margin-bottom:0}.reveal .slides ul.twocol,.reveal .slides ol.twocol{width:80%;position:relative;margin:0 auto;column-count:2;column-gap:4em;list-style:inside;list-style-type:decimal}.reveal .slides ul.twocol li,.reveal .slides ol.twocol li{margin-bottom:var(--li-gap)}.reveal .slides ul.twocol:after,.reveal .slides ol.twocol:after{content:"";width:1px;height:calc(100% - var(--li-gap));background:#ffffff4d;position:absolute;top:0;left:50%}.reveal pre{font-size:calc(.5 * var(--r-main-font-size))}.small,.reveal small{font-size:calc(.7 * var(--r-main-font-size))}.small code,.reveal small code,p code{font-size:.8em}.reveal code.hljs{background:var(--code-full-bg);border-radius:.5rem;padding:.5rem;white-space:pre-wrap}.reveal code.hljs td{line-height:1.4}p.code,p code,small code,.small code,li code{background:var(--code-rgba-bg);padding:.15em .25em;border-radius:.25em}.reveal pre{width:100%}.reveal pre code{display:block;padding:5px;overflow:auto;max-height:400px;word-wrap:normal}:root{--r-background-color: #051525;--r-heading-text-transform: none;--r-heading1-size: 2.7em;--r-main-font-size: 36px;--r-block-margin: 1.8rem;--code-full-bg: #142433;--code-rgba-bg: rgba(91, 102, 112, .3);--r-link-color: #3399FF;--r-link-color-dark: #0088DD;--r-link-color-hover: #AADDFF}.has-light-background{--r-link-color: var(--r-link-color-dark);--r-link-color-hover: #0373bd}.embeddemo{margin:0 auto;padding:64px 128px;display:flex;flex-direction:column;gap:64px;align-items:center}.reveal.embedded{width:100%;max-width:768px;min-width:390px;height:400px;border:4px solid transparent;border:1px solid white;border-radius:8px}.reveal.embedded:not(.focused){cursor:pointer}.reveal.embedded:fullscreen.focused{border-color:transparent;box-shadow:0 4px 16px #000}.reveal.embedded.reveal-scroll{height:400px}.reveal.embedded .progress{background:#4499ee4d;font-size:10px;height:.3em;border-radius:.25em;left:.5em;bottom:.5em;right:.5em;width:calc(100% - 1em);overflow:hidden}.reveal.embedded:hover{border-color:var(--r-link-color)}.reveal.embedded.focused{border-color:transparent;box-shadow:0 0 0 4px var(--r-link-color),0 4px 16px #000}.reveal.embedded:not(.focused):not(:hover){--r-link-color: gray;opacity:.8}.reveal.embedded:not(.focused):not(:hover) .progress{background:#8080804d}a.github-corner{position:sticky;border:none;pointer-events:initial;z-index:2;padding:0;top:0;display:flex;flex-direction:column;line-height:0;width:max-content;height:max-content;opacity:.5;transition:opacity .3s;color:var(--r-heading-color, white)}.rtl a.github-corner{left:auto;margin:0 0 0 auto;right:0}a.github-corner.bottom{position:sticky;top:100%;margin-top:auto;top:calc(100% - 78px)}.reveal.embedded a.github-corner,.reveal-viewport.reveal-scroll a.github-corner{display:none}a.github-corner svg{line-height:0;width:75px;height:75px}html.print-pdf a.github-corner{display:none}a.github-corner:hover{color:var(--r-heading-color, white);opacity:1}.reveal{opacity:0;transition:opacity .5s ease-in}.reveal.ready{opacity:1}.demoblock{background:var(--code-full-bg);border-radius:.5rem;padding:.5em}.demoblock ul.menu li{margin:0}.demoblock ul.menu.tocstyle{width:97%}img{border-radius:5%;box-shadow:0 5px 15px #00000040;width:3.5em;height:3.5em;max-width:100%;max-height:100%}.row.fivegrid{display:grid;width:82%;margin:auto;margin:var(--r-block-margin) auto;grid-template-columns:1fr 1fr 1fr 1fr 1fr;grid-gap:1em}.reveal img.demoimg{width:3.5em;height:3.5em;max-width:100%;max-height:100%;margin:.4em;border-radius:5%}.reveal img.demoimg.smallcircle{margin:.4em;width:3em;height:3em;border-radius:50%}.row.smallcircles{grid-gap:.5em;width:75%}.title{font-size:3em;font-weight:700}.subtitle{font-size:1.5em}
