--- a/src/demo/views/demo-embed.pug
+++ b/src/demo/views/demo-embed.pug
@@ -73,7 +73,8 @@ block append scripts
 					appearparents: true,
 					appearevent: 'auto',
 					autoappear: true,
-					autoelements: {'ul li': 'animate__fadeInLeft', 'h2': {"animation":"animate__shrinkIn", "speed":"slow", "delay":"800"}}
+					autoelements: {'ul li': 'animate__fadeInLeft', 'h2': {"animation":"animate__shrinkIn", "speed":"slow", "delay":"800"}},
+					cssautoload: false
 				}
 			});
 
@@ -86,7 +87,8 @@ block append scripts
 					appearparents: true,
 					appearevent: 'slidechanged',
 					autoappear: true,
-					autoelements: {'ul li': 'animate__fadeInRight', 'h2': {"animation":"animate__fadeInUp", "speed":"slow", "delay":"800"}}
+					autoelements: {'ul li': 'animate__fadeInRight', 'h2': {"animation":"animate__fadeInUp", "speed":"slow", "delay":"800"}},
+					cssautoload: false
 				}
 			});
 
