--- a/src/demo/views/demo-markdown.pug
+++ b/src/demo/views/demo-markdown.pug
@@ -42,7 +42,8 @@ block append scripts
 					appearevent: 'auto',
 					autoappear: true,
 					autoelements: {'ul li': 'animate__fadeInLeft'},
-					compatibility: false
+					compatibility: false,
+					cssautoload: false
 				}
 			});
 
