--- a/src/demo/views/demo.pug
+++ b/src/demo/views/demo.pug
@@ -30,6 +30,7 @@ block append scripts
 				plugins: [ Appearance, RevealHighlight ],
 				appearance: {
 					debug: true,
+					cssautoload: false,
 					appearparents: true,
 					hideagain: true,
 					appearevent: 'auto',
