--- a/src/plugin/css/index.scss
+++ b/src/plugin/css/index.scss
@@ -1,5 +1,9 @@
-@use 'animate.css/animate.css';
+@use 'animate.css/animate.min.css';
 @use '_custom-animations';
 @use '_non-animated';
 @use '_speeds';
 @use '_print-and-speaker';
+
+:root {
+    --cssimported-appearance: true;
+}
