--- a/src/demo/views/demo-markdown.pug
+++ b/src/demo/views/demo-markdown.pug
@@ -25,8 +25,7 @@ block append scripts
 					hideagain: true,
 					appearevent: 'auto',
 					autoappear: true,
-					autoelements: {'ul li': 'animate__fadeInLeft'},
-					compatibility: false
+					autoelements: {'ul li': 'animate__fadeInLeft'}
 				}
 			});
 	else
@@ -41,9 +40,7 @@ block append scripts
 					hideagain: true,
 					appearevent: 'auto',
 					autoappear: true,
-					autoelements: {'ul li': 'animate__fadeInLeft'},
-					compatibility: false,
-					cssautoload: false
+					autoelements: {'ul li': 'animate__fadeInLeft'}
 				}
 			});
 
