--- a/src/demo/views/demo.pug
+++ b/src/demo/views/demo.pug
@@ -19,10 +19,7 @@ block append scripts
 			Reveal.initialize({
 				margin: 0.1, maxScale: 1.8, width: 1080, height: 700,
 				history: true, center: true, controlsTutorial: false,
-				plugins: [ Appearance, RevealHighlight ],
-				appearance: {
-					debug: true
-				}
+				plugins: [ Appearance, RevealHighlight ]
 			});
 	else
 		script(type="module").
