Add tracking of container for container-delay.

--- a/src/demo/views/demo.pug
+++ b/src/demo/views/demo.pug
@@ -19,7 +19,16 @@ block append scripts
 			Reveal.initialize({
 				margin: 0.1, maxScale: 1.8, width: 1080, height: 700,
 				history: true, center: true, controlsTutorial: false,
-				plugins: [ Appearance, RevealHighlight ]
+				plugins: [ Appearance, RevealHighlight ],
+				appearance: {
+					debug: true,
+					appearparents: true,
+					hideagain: true,
+					appearevent: 'auto',
+					autoappear: true,
+					autoelements: {'ul li': 'animate__fadeInLeft'},
+					compatibility: false
+				}
 			});
 	else
 		script(type="module").
@@ -30,7 +39,6 @@ block append scripts
 				plugins: [ Appearance, RevealHighlight ],
 				appearance: {
 					debug: true,
-					cssautoload: false,
 					appearparents: true,
 					hideagain: true,
 					appearevent: 'auto',
