--- a/src/demo/css/demo.scss
+++ b/src/demo/css/demo.scss
@@ -26,6 +26,10 @@ img {
 	max-height: 100%;
 }
 
+// .row {
+// 	  overflow: auto;
+// }
+
 .row.fivegrid {
 	display: grid;
 	width: 82%;
@@ -35,12 +39,19 @@ img {
 	grid-gap: 1em;
 }
 
+
+.reveal section > small {
+  display: block;
+  line-height: 1.3;
+}
+
+
 .reveal img.demoimg {
 	width: 3.5em;
 	height: 3.5em;
 	max-width: 100%;
 	max-height: 100%;
-	margin: 0.4em;
+	// margin: 0.4em;
 	border-radius: 5%;
 	&.smallcircle {
 		margin: 0.4em;
