--- a/src/demo/views/demo.pug
+++ b/src/demo/views/demo.pug
@@ -26,7 +26,7 @@ block append scripts
 					hideagain: true,
 					appearevent: 'auto',
 					autoappear: true,
-					autoelements: {'ul li': 'animate__fadeInLeft'},
+					autoelements: {"ul li": "animate__fadeInLeft"},
 					compatibility: false
 				}
 			});
@@ -43,7 +43,7 @@ block append scripts
 					hideagain: true,
 					appearevent: 'auto',
 					autoappear: true,
-					autoelements: {'ul li': 'animate__fadeInLeft'},
+					autoelements: {"ul li": "animate__fadeInLeft"},
 					compatibility: false
 				}
 			});
